# Aesop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
aesop/: __init__.py  main.py
aesop/atlas/: catalog.py  mapper.py
aesop/atlas/data/: atlas_minimal.json
aesop/cli/: app.py  common.py
aesop/cli/commands/: diff.py  export.py  model.py  validate.py
aesop/core/: analyzer.py  diagrams.py  diff_engine.py  normalizer.py  parser.py  scoring.py
aesop/domain/: enums.py  findings.py  models.py  normalized.py
aesop/reports/: json_report.py  markdown.py  sections.py  terminal.py
aesop/rules/: base.py  cross_context.py  dos_cost_abuse.py  excessive_agency.py  insecure_output.py  logging_leakage.py  memory_abuse.py  missing_approval.py  prompt_injection.py  registry.py  retrieval_exfiltration.py  secret_exposure.py  supply_chain.py  tool_abuse.py
aesop/utils/: errors.py  io.py  logging.py
examples/: diff_new.yaml  diff_old.yaml  multi_tool_agent.yaml  rag_agent.yaml  simple_agent.yaml
tests/: test_analyzer.py  test_cli.py  test_diff.py  test_extended_rules.py  test_normalizer.py  test_parser.py  test_scoring.py  test_validation.py
